--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,7 +1,7 @@
 # Authors
 
 Name Name:
-  name        : "Name Name"
+  name        : "Zhao Ren"
   uri         : "https://name.com"
   email       : "name@name.com"
   bio         : "This is the first name."
