--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,7 +2,7 @@
 
 Name Name:
   name        : "Zhao Ren"
-  uri         : "https://name.com"
+  uri         : "https://zhaoren91.github.io"
   email       : "name@name.com"
   bio         : "This is the first name."
   avatar      : "bio-photo-2.jpg"
