--- a/_config.yml
+++ b/_config.yml
@@ -24,13 +24,13 @@ repository               : "http://zhaoren91.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Zhao Ren"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  bio              : "Speech/Audio AI"
+  location         : "DE"
+  employer         : "University of Bremen"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "" 
 
   # Academic websites
   academia         : # URL
