--- a/_config.yml
+++ b/_config.yml
@@ -9,14 +9,14 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default" # The available themes options are "default", "air", "sunrise", "mint", "dirt" and "contrast"
-title                    : "Zhao Ren"
+title                    : "Your Name / Site Title"
 title_separator          : "-"
-name                     : &name "Zhao Ren"
-description              : &description "University of Bremen"   # Update this with a general description of your site, this is the default if not overridden by a page
-url                      : http://zhaoren91.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
+name                     : &name "Your Name"
+description              : &description "Your Name's academic portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
+url                      : https://academicpages.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "http://zhaoren91.github.io"
+repository               : "academicpages/academicpages.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -24,13 +24,13 @@ repository               : "http://zhaoren91.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Zhao Ren"
+  name             : "Your Sidebar Name"
   pronouns         : # example: "she/her"  
-  bio              : "Speech/Audio AI"
-  location         : "DE"
-  employer         : "University of Bremen"
+  bio              : "Short biography for the left-hand sidebar"
+  location         : "Earth"
+  employer         : "Red Brick University"
   uri              : # URL
-  email            : "" 
+  email            : "none@example.org" 
 
   # Academic websites
   academia         : # URL
