--- a/_config.yml
+++ b/_config.yml
@@ -26,9 +26,9 @@ author:
   avatar           : "profile.png"
   name             : "Zhao Ren"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Speech and Audio AI, Affective Computing"
   location         : "Earth"
-  employer         : "Red Brick University"
+  employer         : "University of Bremen"
   uri              : # URL
   email            : "none@example.org" 
 
