--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ author:
   googlescholar    : "https://scholar.google.com/citations?user=Klrd5CQAAAAJ&hl=en"
   # inspire-hep      : # URL
   # impactstory      : # URL
-  orcid            : "https://orcid.org/yourorcidurl"
+  orcid            : "https://orcid.org/0000-0003-0707-5016"
   # semantic         : # URL
   # ssrn             : # URL
   # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
@@ -51,7 +51,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "https://github.com/zhaoren91"
+  github           : "zhaoren91"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
