--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,8 +8,8 @@
 #      Markdown formatted page while the second is generated using JSON.
 
 main:
-  - title: "About"
-    url: /about/
+  # - title: "About"
+  #  url: /about/
 
   - title: "Publications"
     url: /publications/    
