--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   avatar           : "profile.png"
   name             : "Zhao Ren"
   pronouns         : # example: "she/her"  
-  bio              : "Speech and Audio AI, Affective Computing"
+  bio              : "Affective Computing | Digital Health | Speech and Audio AI"
   location         : "Germany"
   employer         : "University of Bremen"
   # uri              : # URL
