--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,7 +15,7 @@ main:
     url: /publications/    
 
   - title: "Services"
-    url: /activity/
+    url: /service/
 
   - title: "Teaching"
     url: /teaching/    
